Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -3,7 +3,6 @@
 # Copyright (C) 2009 gnome-video-arcade's COPYRIGHT HOLDER
 # This file is distributed under the same license as the gnome-video-arcade package.
 #
-# Jorge González <jorgegonz@svn.gnome.org>, 2009.
 # Omar Campagne <ocampagne@gmail.com>, 2009.
 # Jorge González <jorgegonz@svn.gnome.org>, 2009.
 # Jorge González <jorgegonz@svn.gnome.org>, 2009.
@@ -11,15 +10,232 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-video-arcade.po.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=\n"
-"POT-Creation-Date: 2009-08-20 20:49+0000\n"
-"PO-Revision-Date: 2009-08-23 18:04+0200\n"
-"Last-Translator: Omar Campagne <ocampagne@gmail.com>\n"
+"POT-Creation-Date: 2009-10-10 20:39+0000\n"
+"PO-Revision-Date: 2009-11-03 21:13+0100\n"
+"Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 "X-Generator: KBabel 1.11.4\n"
+
+#: ../data/gnome-video-arcade.builder.h:1
+msgid " "
+msgstr " "
+
+#: ../data/gnome-video-arcade.builder.h:2
+#| msgid "• <b>THIS GAME DOESN'T WORK.</b>"
+msgid "&#x2022; <b>THIS GAME DOESN'T WORK.</b>"
+msgstr "&#x2022; <b>ESTE JUEGO NO FUNCIONA.</b>"
+
+#: ../data/gnome-video-arcade.builder.h:3
+#| msgid "• Screen flipping in cocktail mode is not supported."
+msgid "&#x2022; Screen flipping in cocktail mode is not supported."
+msgstr "&#x2022; El cambio de pantalla no es compatible con el modo «cocktail»."
+
+#: ../data/gnome-video-arcade.builder.h:4
+#| msgid "• The colors are completely wrong."
+msgid "&#x2022; The colors are completely wrong."
+msgstr "&#x2022; Los colores son completamente erróneos."
+
+#: ../data/gnome-video-arcade.builder.h:6
+#, no-c-format
+#| msgid "• The colors aren't 100% accurate."
+msgid "&#x2022; The colors aren't 100% accurate."
+msgstr "&#x2022; Los colores no son 100% exactos."
+
+#: ../data/gnome-video-arcade.builder.h:7
+#| msgid "• The game has protection which isn't fully emulated."
+msgid "&#x2022; The game has protection which isn't fully emulated."
+msgstr "&#x2022; El juego posee una protección que no está totalmente emulada."
+
+#: ../data/gnome-video-arcade.builder.h:8
+#| msgid "• The game lacks sound."
+msgid "&#x2022; The game lacks sound."
+msgstr "&#x2022; Este juego no tiene sonido."
+
+#: ../data/gnome-video-arcade.builder.h:10
+#, no-c-format
+#| msgid "• The sound emulation isn't 100% accurate."
+msgid "&#x2022; The sound emulation isn't 100% accurate."
+msgstr "&#x2022; La emulación de sonido no es 100% exacta."
+
+#: ../data/gnome-video-arcade.builder.h:12
+#, no-c-format
+#| msgid "• The video emulation isn't 100% accurate."
+msgid "&#x2022; The video emulation isn't 100% accurate."
+msgstr "&#x2022; La emulación de vídeo no es 100% exacta."
+
+#: ../data/gnome-video-arcade.builder.h:13
+msgid "<b>Alternate Versions</b>"
+msgstr "<b>Versiones alternativas</b>"
+
+#: ../data/gnome-video-arcade.builder.h:14
+msgid "<b>BIOS</b>"
+msgstr "<b>BIOS</b>"
+
+#: ../data/gnome-video-arcade.builder.h:15
+msgid "<b>CPU</b>"
+msgstr "<b>CPU</b>"
+
+#: ../data/gnome-video-arcade.builder.h:16
+msgid "<b>Columns</b>"
+msgstr "<b>Columnas</b>"
+
+#: ../data/gnome-video-arcade.builder.h:17
+msgid "<b>Game List</b>"
+msgstr "<b>Lista de juegos</b>"
+
+#: ../data/gnome-video-arcade.builder.h:18
+msgid "<b>General</b>"
+msgstr "<b>General</b>"
+
+#: ../data/gnome-video-arcade.builder.h:19
+msgid "<b>Original Version</b>"
+msgstr "<b>Versión original</b>"
+
+#: ../data/gnome-video-arcade.builder.h:20
+msgid "<b>Sound</b>"
+msgstr "<b>Sonido</b>"
+
+#. The same text is in gnome-video-arcade.builder,
+#. * so it has to be translated with markup anyway.
+#: ../data/gnome-video-arcade.builder.h:21 ../src/gva-columns.c:708
+msgid "<b>There are known problems with this game:</b>"
+msgstr "<b>Existen problemas conocidos con este juego:</b>"
+
+#: ../data/gnome-video-arcade.builder.h:22
+msgid "<b>Video</b>"
+msgstr "<b>Vídeo</b>"
+
+#: ../data/gnome-video-arcade.builder.h:23
+msgid "<big><b>Errors detected in ROM files</b></big>"
+msgstr "<big><b>Se detectaron errores en los archivos ROM</b></big>"
+
+#: ../data/gnome-video-arcade.builder.h:24
+msgid ""
+"<small><i><b>Note:</b> Setting this will not take effect until the second "
+"time the game is started. It does not apply to recording or playing back "
+"games.</i></small>"
+msgstr ""
+"<small><i><b>Nota:<b> Esta configuración no tendrá efecto hasta la segunda "
+"vez que se inicie el juego. Esto no afecta la grabación o reproducción de "
+"partidas.</i></small>"
+
+#: ../data/gnome-video-arcade.builder.h:25
+msgid ""
+"<small><i>If these games worked with previous versions of MAME, it is likely "
+"their ROM requirements have changed.  If so, you will need to acquire more "
+"recent ROM files.</i></small>"
+msgstr ""
+"<small><i>Si estos juegos funcionaban en anteriores versiones de MAME, es "
+"probable que los requisitos de la ROM hayan cambiado. Si es así, tendrá que "
+"adquirir archivos ROM más recientes.</i></small>"
+
+#: ../data/gnome-video-arcade.builder.h:26
+msgid ""
+"An audit of the available games has detected errors in some of the ROM "
+"files. The following games will not be available in GNOME Video Arcade."
+msgstr ""
+"El examen de los juegos disponibles ha detectado errores en algunos archivos "
+"ROM. Los siguientes juegos no estarán disponibles en «GNOME Video Arcade»."
+
+#: ../data/gnome-video-arcade.builder.h:27
+msgid "Choose the order of information to appear in the game list."
+msgstr "Escoja el tipo de información que quiere ver en la lista de juegos."
+
+#: ../data/gnome-video-arcade.builder.h:28
+msgid "Close this window"
+msgstr "Cerrar esta ventana"
+
+#: ../data/gnome-video-arcade.builder.h:29
+msgid "Columns"
+msgstr "Columnas"
+
+#: ../data/gnome-video-arcade.builder.h:30
+msgid "Delete the selected game recordings"
+msgstr "Borrar las partidas grabadas seleccionadas"
+
+#: ../data/gnome-video-arcade.builder.h:31
+msgid "GNOME Video Arcade"
+msgstr "GNOME vídeo arcade"
+
+#: ../data/gnome-video-arcade.builder.h:32
+msgid "Gallery"
+msgstr "Galería"
+
+#: ../data/gnome-video-arcade.builder.h:33
+msgid "General"
+msgstr "General"
+
+#: ../data/gnome-video-arcade.builder.h:34
+msgid "History"
+msgstr "Historia"
+
+#: ../data/gnome-video-arcade.builder.h:35 ../src/gva-ui.c:811
+msgid "Only show my favorite games"
+msgstr "Mostrar sólo mis juegos favoritos"
+
+#: ../data/gnome-video-arcade.builder.h:36
+msgid "Play _Back"
+msgstr "_Reproducir"
+
+#: ../data/gnome-video-arcade.builder.h:37 ../src/gva-ui.c:655
+msgid "Play back the selected game recording"
+msgstr "Reproducir la partida grabada seleccionada"
+
+#: ../data/gnome-video-arcade.builder.h:38
+msgid "Preferences"
+msgstr "Preferencias"
+
+#: ../data/gnome-video-arcade.builder.h:39
+msgid "Properties"
+msgstr "Propiedades"
+
+#: ../data/gnome-video-arcade.builder.h:40
+msgid "Recorded Games"
+msgstr "Partidas grabadas"
+
+#: ../data/gnome-video-arcade.builder.h:41 ../src/gva-ui.c:711
+msgid "Save ROM errors to a file"
+msgstr "Guardar los errores de la ROM a un archivo"
+
+#: ../data/gnome-video-arcade.builder.h:42
+msgid "Search for:"
+msgstr "Buscar:"
+
+#: ../data/gnome-video-arcade.builder.h:43 ../src/gva-ui.c:804
+msgid "Show all available games"
+msgstr "Mostrar todos los juegos disponibles"
+
+#: ../data/gnome-video-arcade.builder.h:44 ../src/gva-ui.c:676
+msgid "Show information about the selected game"
+msgstr "Mostrar información acerca del juego seleccionado"
+
+#: ../data/gnome-video-arcade.builder.h:45 ../src/gva-ui.c:818
+msgid "Show my search results"
+msgstr "Mostrar los resultados de la búsqueda"
+
+#: ../data/gnome-video-arcade.builder.h:46 ../src/gva-ui.c:648
+msgid "Show next game"
+msgstr "Mostrar siguiente juego"
+
+#: ../data/gnome-video-arcade.builder.h:47 ../src/gva-ui.c:669
+msgid "Show previous game"
+msgstr "Mostrar juego anterior"
+
+#: ../data/gnome-video-arcade.builder.h:48 ../src/gva-ui.c:732
+msgid "Start the selected game"
+msgstr "Iniciar el juego seleccionado"
+
+#: ../data/gnome-video-arcade.builder.h:49
+msgid "Technical"
+msgstr "Técnico"
+
+#: ../data/gnome-video-arcade.builder.h:50
+msgid "_Start Game"
+msgstr "_Iniciar juego"
 
 #: ../src/gconf-bridge.c:1218
 #, c-format
@@ -73,125 +289,119 @@ msgstr "Quitar columna %s"
 msgid "Remove the \"%s\" column from the game list"
 msgstr "Quitar la columna «%s» de la lista de juegos"
 
-#. The same text is in gnome-video-arcade.builder,
-#. * so it has to be translated with markup anyway.
-#: ../src/gva-columns.c:708
-msgid "<b>There are known problems with this game:</b>"
-msgstr "<b>Existen problemas conocidos con este juego:</b>"
-
 #. The labels begin with a UTF-8 encoded bullet character.
-#: ../src/gva-columns.c:719
-#, c-format
+#: ../src/gva-columns.c:720
+#, no-c-format
 msgid "• The colors aren't 100% accurate."
 msgstr "• Los colores no son 100% exactos."
 
-#: ../src/gva-columns.c:728
+#: ../src/gva-columns.c:729
 msgid "• The colors are completely wrong."
 msgstr "• Los colores son completamente erróneos."
 
-#: ../src/gva-columns.c:737
-#, c-format
+#: ../src/gva-columns.c:739
+#, no-c-format
 msgid "• The video emulation isn't 100% accurate."
 msgstr "• La emulación de vídeo no es 100% exacta."
 
-#: ../src/gva-columns.c:746
-#, c-format
+#: ../src/gva-columns.c:749
+#, no-c-format
 msgid "• The sound emulation isn't 100% accurate."
 msgstr "• La emulación de sonido no es 100% exacta."
 
-#: ../src/gva-columns.c:755
+#: ../src/gva-columns.c:758
 msgid "• The game lacks sound."
 msgstr "• Este juego no tiene sonido."
 
-#: ../src/gva-columns.c:764
+#: ../src/gva-columns.c:767
 msgid "• Screen flipping in cocktail mode is not supported."
 msgstr "• El cambio de pantalla no es compatible con el modo «cocktail»."
 
-#: ../src/gva-columns.c:773
+#: ../src/gva-columns.c:776
 msgid "• <b>THIS GAME DOESN'T WORK.</b>"
 msgstr "• <b>ESTE JUEGO NO FUNCIONA.</b>"
 
-#: ../src/gva-columns.c:783
+#: ../src/gva-columns.c:786
 msgid "• The game has protection which isn't fully emulated."
 msgstr "• El juego posee una protección que no está totalmente emulada."
 
-#: ../src/gva-columns.c:819
+#: ../src/gva-columns.c:822
 msgid "Click here to remove from favorites"
 msgstr "Pulse aquí para quitar de favoritos"
 
-#: ../src/gva-columns.c:821
+#: ../src/gva-columns.c:824
 msgid "Click here to add to favorites"
 msgstr "Pulse aquí para añadir a favoritos"
 
-#: ../src/gva-columns.c:913 ../src/gva-properties.c:412
+#: ../src/gva-columns.c:916 ../src/gva-properties.c:412
 msgid "(Game Description Unknown)"
 msgstr "(Descripción del juego desconocida)"
 
-#: ../src/gva-columns.c:916 ../src/gva-properties.c:415
+#: ../src/gva-columns.c:919 ../src/gva-properties.c:415
 msgid "(Manufacturer Unknown)"
 msgstr "(Fabricante desconocido)"
 
-#: ../src/gva-columns.c:919 ../src/gva-properties.c:418
+#: ../src/gva-columns.c:922 ../src/gva-properties.c:418
 msgid "(Year Unknown)"
 msgstr "(Año desconocido)"
 
-#: ../src/gva-columns.c:943 ../src/gva-main.c:974
+#: ../src/gva-columns.c:946 ../src/gva-main.c:974
 msgid "ROM Name"
 msgstr "Nombre de la ROM"
 
-#: ../src/gva-columns.c:945
+#: ../src/gva-columns.c:948
 msgid "BIOS"
 msgstr "BIOS"
 
-#: ../src/gva-columns.c:947 ../src/gva-main.c:967
+#: ../src/gva-columns.c:950 ../src/gva-main.c:967
 msgid "Category"
 msgstr "Categoría"
 
-#: ../src/gva-columns.c:949
+#: ../src/gva-columns.c:952
 msgid "Favorite"
 msgstr "Favorito"
 
-#: ../src/gva-columns.c:952
+#: ../src/gva-columns.c:955
 msgid "Driver"
 msgstr "Controlador"
 
-#: ../src/gva-columns.c:960
+#: ../src/gva-columns.c:963
 msgid "Samples"
 msgstr "Muestras"
 
-#: ../src/gva-columns.c:962
+#: ../src/gva-columns.c:965
 msgid "Title"
 msgstr "Título"
 
-#: ../src/gva-columns.c:965
+#: ../src/gva-columns.c:968
 msgid "Year"
 msgstr "Año"
 
-#: ../src/gva-columns.c:968 ../src/gva-main.c:953
+#: ../src/gva-columns.c:971 ../src/gva-main.c:953
 msgid "Manufacturer"
 msgstr "Fabricante"
 
-#: ../src/gva-columns.c:974
+#: ../src/gva-columns.c:977
 msgid "Players"
 msgstr "Jugadores"
 
-#: ../src/gva-columns.c:977
+#: ../src/gva-columns.c:980
 msgid "Players (Alt.)"
 msgstr "Jugadores (Alt.)"
 
-#: ../src/gva-columns.c:980
+#: ../src/gva-columns.c:983
 msgid "Players (Sim.)"
 msgstr "Jugadores (Sim.)"
 
-#: ../src/gva-columns.c:985
+#: ../src/gva-columns.c:988
 msgid "Status"
 msgstr "Estado"
 
-#: ../src/gva-columns.c:996
+#: ../src/gva-columns.c:999
 msgid "Comment"
 msgstr "Comentario"
 
-#: ../src/gva-columns.c:1000
+#: ../src/gva-columns.c:1003
 msgid "Played On"
 msgstr "Reproduciendo"
 
@@ -468,17 +678,9 @@ msgstr "Añadir a _favoritos"
 msgid "Add the selected game to my list of favorites"
 msgstr "Añadir el juego seleccionado a mi lista de favoritos"
 
-#: ../src/gva-ui.c:648
-msgid "Show next game"
-msgstr "Mostrar siguiente juego"
-
 #: ../src/gva-ui.c:653 ../src/gva-ui.c:723
 msgid "Play _Back..."
 msgstr "_Reproducir…"
-
-#: ../src/gva-ui.c:655
-msgid "Play back the selected game recording"
-msgstr "Reproducir la partida grabada seleccionada"
 
 #: ../src/gva-ui.c:660
 msgid "_Preferences"
@@ -488,17 +690,9 @@ msgstr "Prefere_ncias"
 msgid "Configure the application"
 msgstr "Configurar la aplicación"
 
-#: ../src/gva-ui.c:669
-msgid "Show previous game"
-msgstr "Mostrar juego anterior"
-
 #: ../src/gva-ui.c:674
 msgid "_Properties"
 msgstr "_Propiedades"
-
-#: ../src/gva-ui.c:676
-msgid "Show information about the selected game"
-msgstr "Mostrar información acerca del juego seleccionado"
 
 #: ../src/gva-ui.c:681
 msgid "_Quit"
@@ -530,10 +724,6 @@ msgstr "Quitar el juego seleccionado de mi lista de favoritos"
 msgid "Save _As..."
 msgstr "Guardar _como…"
 
-#: ../src/gva-ui.c:711
-msgid "Save ROM errors to a file"
-msgstr "Guardar los errores de la ROM a un archivo"
-
 #: ../src/gva-ui.c:716
 msgid "S_earch..."
 msgstr "_Buscar…"
@@ -549,10 +739,6 @@ msgstr "Reproducir una partida grabada con anterioridad"
 #: ../src/gva-ui.c:730
 msgid "_Start"
 msgstr "_Iniciar"
-
-#: ../src/gva-ui.c:732
-msgid "Start the selected game"
-msgstr "Iniciar el juego seleccionado"
 
 #: ../src/gva-ui.c:737
 msgid "_Add Column"
@@ -590,25 +776,13 @@ msgstr "_Mostrar versiones alternativas de juegos originales"
 msgid "_Available Games"
 msgstr "Juegos _disponibles"
 
-#: ../src/gva-ui.c:804
-msgid "Show all available games"
-msgstr "Mostrar todos los juegos disponibles"
-
 #: ../src/gva-ui.c:809
 msgid "_Favorite Games"
 msgstr "Juegos _favoritos"
 
-#: ../src/gva-ui.c:811
-msgid "Only show my favorite games"
-msgstr "Mostrar sólo mis juegos favoritos"
-
 #: ../src/gva-ui.c:816
 msgid "Search _Results"
 msgstr "_Resultados de la búsqueda"
-
-#: ../src/gva-ui.c:818
-msgid "Show my search results"
-msgstr "Mostrar los resultados de la búsqueda"
 
 #: ../src/gva-ui.c:901
 msgid "Failed to initialize user interface"
@@ -669,110 +843,6 @@ msgstr ""
 "debido a que MAME no está bien configurado, o que no hay ningún archivo ROM "
 "instalado. Consulte la documentación del usuario para obtener más detalles y "
 "consejos para la identificación y solución de los problemas."
-
-#~ msgid " "
-#~ msgstr " "
-
-#~ msgid "<b>Alternate Versions</b>"
-#~ msgstr "<b>Versiones alternativas</b>"
-
-#~ msgid "<b>BIOS</b>"
-#~ msgstr "<b>BIOS</b>"
-
-#~ msgid "<b>CPU</b>"
-#~ msgstr "<b>CPU</b>"
-
-#~ msgid "<b>Columns</b>"
-#~ msgstr "<b>Columnas</b>"
-
-#~ msgid "<b>Game List</b>"
-#~ msgstr "<b>Lista de juegos</b>"
-
-#~ msgid "<b>General</b>"
-#~ msgstr "<b>General</b>"
-
-#~ msgid "<b>Original Version</b>"
-#~ msgstr "<b>Versión original</b>"
-
-#~ msgid "<b>Sound</b>"
-#~ msgstr "<b>Sonido</b>"
-
-#~ msgid "<b>Video</b>"
-#~ msgstr "<b>Vídeo</b>"
-
-#~ msgid "<big><b>Errors detected in ROM files</b></big>"
-#~ msgstr "<big><b>Se detectaron errores en los archivos ROM</b></big>"
-
-#~ msgid ""
-#~ "<small><i><b>Note:</b> Setting this will not take effect until the second "
-#~ "time the game is started. It does not apply to recording or playing back "
-#~ "games.</i></small>"
-#~ msgstr ""
-#~ "<small><i><b>Nota:<b> Esta configuración no tendrá efecto hasta la "
-#~ "segunda vez que se inicie el juego. Esto no afecta la grabación o "
-#~ "reproducción de partidas.</i></small>"
-
-#~ msgid ""
-#~ "<small><i>If these games worked with previous versions of MAME, it is "
-#~ "likely their ROM requirements have changed.  If so, you will need to "
-#~ "acquire more recent ROM files.</i></small>"
-#~ msgstr ""
-#~ "<small><i>Si estos juegos funcionaban en anteriores versiones de MAME, es "
-#~ "probable que los requisitos de la ROM hayan cambiado. Si es así, tendrá "
-#~ "que adquirir archivos ROM más recientes.</i></small>"
-
-#~ msgid ""
-#~ "An audit of the available games has detected errors in some of the ROM "
-#~ "files. The following games will not be available in GNOME Video Arcade."
-#~ msgstr ""
-#~ "El examen de los juegos disponibles ha detectado errores en algunos "
-#~ "archivos ROM. Los siguientes juegos no estarán disponibles en «GNOME Video "
-#~ "Arcade»."
-
-#~ msgid "Choose the order of information to appear in the game list."
-#~ msgstr "Escoja el tipo de información que quiere ver en la lista de juegos."
-
-#~ msgid "Close this window"
-#~ msgstr "Cerrar esta ventana"
-
-#~ msgid "Columns"
-#~ msgstr "Columnas"
-
-#~ msgid "Delete the selected game recordings"
-#~ msgstr "Borrar las partidas grabadas seleccionadas"
-
-#~ msgid "GNOME Video Arcade"
-#~ msgstr "GNOME vídeo arcade"
-
-#~ msgid "Gallery"
-#~ msgstr "Galería"
-
-#~ msgid "General"
-#~ msgstr "General"
-
-#~ msgid "History"
-#~ msgstr "Historia"
-
-#~ msgid "Play _Back"
-#~ msgstr "_Reproducir"
-
-#~ msgid "Preferences"
-#~ msgstr "Preferencias"
-
-#~ msgid "Properties"
-#~ msgstr "Propiedades"
-
-#~ msgid "Recorded Games"
-#~ msgstr "Partidas grabadas"
-
-#~ msgid "Search for:"
-#~ msgstr "Buscar:"
-
-#~ msgid "Technical"
-#~ msgstr "Técnico"
-
-#~ msgid "_Start Game"
-#~ msgstr "_Iniciar juego"
 
 #~ msgid "gtk-close"
 #~ msgstr "gtk-close"
