Add music clips to the Properties window.
This adds an optional dependency on GStreamer.  Music clips are streamed
in MP3 format from http://www.arcade-history.com/.  Music clips are not
yet available for all games, but the collection appears to be growing.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GNOME Video Arcade 0.7.0
+========================
+
+        Released ???, 2010
+
+        What's New
+        ----------
+        * In the Properties window you can now listen to music clips of
+          the selected game.  Not all games have music clips available.
+
 GNOME Video Arcade 0.6.8
 ========================
 
