Detect changes to ROM directories.
Create a GFileMonitor for each directory in the "rompath" configuration
setting.  When a change notification is received, present the user with
a dialog offering to reanalyze the ROM files in order to update the game
list without having to restart GNOME Video Arcade.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+GNOME Video Arcade 0.7.1
+========================
+
+        Released ????, 2010
+
+        What's New
+        ----------
+        * GNOME Video Arcade now detects changes to your ROMs directory,
+          such as adding or removing games, while its running and offers
+          to rescan your ROM files in order to present an updated game
+          list without having to restart the application.
+
 GNOME Video Arcade 0.7.0
 ========================
 
